[package]
name = "tmux-leap"
version = "1.8.2"
description = "creates and jumps through tmux sessions via fzf"
edition = "2021"
license = "MIT"
homepage = "https://github.com/fibsussy/tmux-leap"
repository = "https://github.com/fibsussy/tmux-leap"

[dependencies]
clap = { version = "4", features = ["derive"] }
home = "0"
regex = "1"
dirs = "5"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1"
lazy_static = "1"
clap_complete = "4.5.40"
shellexpand = "3.1.0"
